<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_xsmall"
        android:baselineAligned="true"
        android:orientation="vertical"
        tools:context="screens.stockdetails.StockDetailsFragment">

        <TextView
            android:id="@+id/stock_symbol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_small"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:text="AAPL" />

        <TextView
            android:id="@+id/stock_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dimen_small"
            android:layout_weight="1"
            android:textAlignment="center"
            tools:text="Apple" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_xsmall"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/stock_exchange_label" />


                    <TextView
                        android:id="@+id/stock_exchange"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="Nasdaq" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/stock_price_label" />


                    <TextView
                        android:id="@+id/stock_price"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="$12.00" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/change_in_price_label" />


                    <TextView
                        android:id="@+id/stock_change"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="-2.00" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/percentage_change_in_price_label" />

                    <TextView
                        android:id="@+id/stock_change_in_percent"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="-1.12" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/opening_price_label" />

                    <TextView
                        android:id="@+id/stock_open"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="12.10" />
                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/dimen_normal"
                android:paddingEnd="@dimen/dimen_normal">

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/day_high_label" />

                    <TextView
                        android:id="@+id/stock_day_high"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="13.25" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/day_low_label" />

                    <TextView
                        android:id="@+id/stock_day_low"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="9.56" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/year_high_label" />

                    <TextView
                        android:id="@+id/stock_year_high"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="14.69" />

                </TableRow>

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/year_low_label" />

                    <TextView
                        android:id="@+id/stock_year_low"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="9.02" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/previous_close_label" />

                    <TextView
                        android:id="@+id/stock_previous_close"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="12.08" />
                </TableRow>

            </TableLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_medium"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_xsmall"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <TableRow android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/stock_amount_label" />

                    <TextView
                        android:id="@+id/stock_amount"
                        style="@style/TextStyle.StockDetail.Value"
                        tools:text="25" />

                </TableRow>

            </TableLayout>

            <TableLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="@dimen/dimen_normal"
                android:paddingEnd="@dimen/dimen_normal">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/dimen_small">

                    <TextView
                        style="@style/TextStyle.StockDetail.Label"
                        android:text="@string/stock_tax_label" />


                    <TextView
                        android:id="@+id/stock_tax"
                        style="@style/TextStyle.StockDetail.Value"
                        android:text="0.3" />

                </TableRow>

            </TableLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_small"
            android:layout_weight="1"
            android:text="@string/stock_price_result_label"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/stock_price_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            tools:text="250.00" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_small"
            android:layout_weight="1"
            tools:text="Купить" />


    </LinearLayout>
</layout>